feat: get availability for all employees route
