# packages/backend/openapi.json
@@ -291,6 +291,88 @@
           "passthroughBehavior": "when_no_match"
         }
       }
+    },
+    "/{businessId}/availability/services/{serviceId}": {
+      "get": {
+        "tags": [
+          "Availability"
+        ],
+        "operationId": "getAvailability",
+        "parameters": [
+          {
+            "name": "businessId",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          },
+          {
+            "name": "serviceId",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          },
+          {
+            "name": "initialDate",
+            "in": "query",
+            "required": false,
+            "schema": {
+              "type": "string",
+              "format": "date-time"
+            }
+          },
+          {
+            "name": "finalDate",
+            "in": "query",
+            "required": false,
+            "schema": {
+              "type": "string",
+              "format": "date-time"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Availability fetched successfully",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/AvailabilityPerSlotResponse"
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "Invalid request",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/ErrorResponse"
+                }
+              }
+            }
+          },
+          "500": {
+            "description": "Internal server error",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/ErrorResponse"
+                }
+              }
+            }
+          }
+        },
+        "x-amazon-apigateway-integration": {
+          "type": "aws_proxy",
+          "httpMethod": "POST",
+          "uri": "arn:aws:apigateway:${AWS::Region}:lambda:path/2015-03-31/functions/${GetAvailabilityLambdaArn}/invocations",
+          "passthroughBehavior": "when_no_match"
+        }
+      }
     }
   },
   "components": {
@@ -359,60 +441,7 @@
           "employees": {
             "type": "array",
             "items": {
-              "required": [
-                "id",
-                "name"
-              ],
-              "type": "object",
-              "properties": {
-                "createdAt": {
-                  "type": "string",
-                  "format": "date-time"
-                },
-                "name": {
-                  "type": "string"
-                },
-                "id": {
-                  "type": "string"
-                },
-                "availability": {
-                  "type": "array",
-                  "items": {
-                    "required": [
-                      "range",
-                      "weekDay"
-                    ],
-                    "type": "object",
-                    "properties": {
-                      "weekDay": {
-                        "type": "number"
-                      },
-                      "range": {
-                        "type": "array",
-                        "items": {
-                          "required": [
-                            "end",
-                            "start"
-                          ],
-                          "type": "object",
-                          "properties": {
-                            "start": {
-                              "type": "string"
-                            },
-                            "end": {
-                              "type": "string"
-                            }
-                          }
-                        }
-                      }
-                    }
-                  }
-                },
-                "updatedAt": {
-                  "type": "string",
-                  "format": "date-time"
-                }
-              }
+              "$ref": "#/components/schemas/Employee"
             }
           }
         }
@@ -461,6 +490,116 @@
           },
           "businessId": {
             "type": "string"
+          }
+        }
+      },
+      "AvailabilityPerSlotResponse": {
+        "title": "AvailabilityPerSlotResponse",
+        "required": [
+          "businessId",
+          "freeSlots"
+        ],
+        "type": "object",
+        "properties": {
+          "freeSlots": {
+            "type": "array",
+            "items": {
+              "required": [
+                "date",
+                "slots"
+              ],
+              "type": "object",
+              "properties": {
+                "date": {
+                  "type": "string",
+                  "format": "date-time"
+                },
+                "slots": {
+                  "type": "array",
+                  "items": {
+                    "required": [
+                      "end",
+                      "start",
+                      "employees"
+                    ],
+                    "type": "object",
+                    "properties": {
+                      "start": {
+                        "type": "string"
+                      },
+                      "end": {
+                        "type": "string"
+                      },
+                      "employees": {
+                        "type": "array",
+                        "items": {
+                          "$ref": "#/components/schemas/Employee"
+                        }
+                      }
+                    }
+                  }
+                }
+              }
+            }
+          },
+          "businessId": {
+            "type": "string"
+          }
+        }
+      },
+      "Employee": {
+        "required": [
+          "id",
+          "name"
+        ],
+        "type": "object",
+        "properties": {
+          "createdAt": {
+            "type": "string",
+            "format": "date-time"
+          },
+          "name": {
+            "type": "string"
+          },
+          "id": {
+            "type": "string"
+          },
+          "availability": {
+            "type": "array",
+            "items": {
+              "required": [
+                "range",
+                "weekDay"
+              ],
+              "type": "object",
+              "properties": {
+                "weekDay": {
+                  "type": "number"
+                },
+                "range": {
+                  "type": "array",
+                  "items": {
+                    "required": [
+                      "end",
+                      "start"
+                    ],
+                    "type": "object",
+                    "properties": {
+                      "start": {
+                        "type": "string"
+                      },
+                      "end": {
+                        "type": "string"
+                      }
+                    }
+                  }
+                }
+              }
+            }
+          },
+          "updatedAt": {
+            "type": "string",
+            "format": "date-time"
           }
         }
       },
